--- a/cats.html
+++ b/cats.html
@@ -38,11 +38,9 @@
 				  </div>
 				  <nav id="nav-menu-container">
 					<ul class="nav-menu">
-					  <li class="menu-active"><a href="index.html">Home</a></li>
-					  <li><a href="about.html">About Us</a></li>
-					  <li><a href="cats.html">SERVICIOS</a></li>
-					  <li><a href="dogs.html">Dogs</a></li>
-					  <li><a href="volunteer.html">Volunteer</a></li>
+					  <li class="menu-active"><a href="index.html">Inicio</a></li>
+					  <li><a href="about.html">Servios</a></li>
+					  <li><a href="cats.html">Contacto</a></li>
 					  <li class="menu-has-children"><a href="">Blog</a>
 						<ul>
 						  <li><a href="blog-home.html">Blog Home</a></li>
