--- a/cats.html
+++ b/cats.html
@@ -39,7 +39,7 @@
 				  <nav id="nav-menu-container">
 					<ul class="nav-menu">
 					  <li class="menu-active"><a href="index.html">Inicio</a></li>
-					  <li><a href="about.html">Servios</a></li>
+					  <li><a href="about.html">Servicios</a></li>
 					  <li><a href="cats.html">Contacto</a></li>
 					  <li class="menu-has-children"><a href="">Blog</a>
 						<ul>
