--- a/Servicios.html
+++ b/Servicios.html
@@ -166,7 +166,7 @@
 						En nuestra clinica veterinaria, nos enorgullece ofrecer una amplia gama de 
 						servicios para el cuidado integral de tus mascotas. Nuestro equipo altamente c
 						alificado de veterinarios y personal especializado esta comprometido en brindar 
-						la atencion y el cariño que tus animales merecen.
+						la atencion y el carino que tus animales merecen.
 					</p>
 					<div class="buttons d-flex flex-row">
 						<a href="#" class="primary-btn text-uppercase">Ver Detalles</a>
