--- a/Servicios.html
+++ b/Servicios.html
@@ -196,16 +196,9 @@
 							<h6>Enlaces Utiles</h6>
 							<div class="row">
 								<ul class="col footer-nav">
-									<li><a href="#">Home</a></li>
-									<li><a href="#">Service</a></li>
-									<li><a href="#">About</a></li>
-									<li><a href="#">Case Study</a></li>
-								</ul>
-								<ul class="col footer-nav">
-									<li><a href="#">Pricing</a></li>
-									<li><a href="#">Team</a></li>
-									<li><a href="#">Blog</a></li>
-								</ul>									
+									<li><a href="#">Inicio</a></li>
+									<li><a href="#">Servicios</a></li>
+								</ul>								
 							</div>
 						</div>
 					</div>						
@@ -215,7 +208,7 @@
 				<div class="container">
 					<div class="row footer-bottom d-flex justify-content-between">
 						<p class="col-lg-8 col-sm-6 footer-text m-0 text-white"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+Veterinaria &copy;<script>document.write(new Date().getFullYear());</script> Cualquier consulta las paginas <i class="fa fa-heart-o" aria-hidden="true"></i> estan <a href="https://colorlib.com" target="_blank">Disponibles</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
 						<div class="col-lg-4 col-sm-6 footer-social">
 							<a href="#"><i class="fa fa-facebook"></i></a>
