--- a/Servicios.html
+++ b/Servicios.html
@@ -186,7 +186,7 @@
 							<h6>Sobre nosotros</h6>
 							<p>
 								Estamos dedicados a brindar a tus mascotas una vida feliz y saludable. 
-								Confia en nosotros para cuidar de tus compañeros peludos con el amor y 
+								Confia en nosotros para cuidar de tus companeros peludos con el amor y 
 								la atencion que se merecen.
 							</p>
 						</div>
