--- a/Servicios.html
+++ b/Servicios.html
@@ -75,7 +75,7 @@
 						<h1 class="text-white">
 							SERVICIOS				
 						</h1>	
-						<p class="text-white link-nav"><a href="index.html">Home </a>  <span class="lnr lnr-arrow-right"></span>  <a href="cats.html"> Cats</a></p>
+						<p class="text-white link-nav"><a href="index.html">Inicio</a>  <span class="lnr lnr-arrow-right"></span>  <a href="cats.html"> Servicios</a></p>
 					</div>	
 				</div>
 			</div>
